src/style/_layout.scss
/* ... */
.scheme-container {
  margin: 0 0 20px 0;
  padding: 15px 0;
  position: sticky;
  top: 0;
  z-index: 1;

  background: $scheme-container-background-color;
  box-shadow: 0 1px 2px 0 rgba($scheme-container-box-shadow-color, 0.15);

  .schemes {
    display: flex;
    align-items: flex-end;
    justify-content: space-between;
    flex-wrap: wrap;

    gap: 10px;

    /*
        This wraps the servers or schemes selector.
        This was added to make sure the Authorize button is always on the right
        and the servers or schemes selector is always on the left.
        */
    > .schemes-server-container {
      display: flex;
      flex-wrap: wrap;

      gap: 10px;

      > label {
        font-size: 12px;
        font-weight: bold;

        display: flex;
        align-items: center;
        column-gap: 10px;

        margin: -20px 15px 0 0;

        @include type.text_headline();

        select {
          min-width: 130px;

          text-transform: uppercase;
        }
      }
    }

    /*
        This checks if the schemes-server-container is not present and
        aligns the authorize button to the right
        */
    &:not(:has(.schemes-server-container)) {
      justify-content: flex-end;
    }

    /*
        Target Authorize Button in schemes wrapper
        This was added here to fix responsiveness issues with the authorize button
        within the schemes wrapper without affecting other instances of it's usage
        */
    .auth-wrapper {
      flex: none;
      justify-content: start;

      .authorize {
        padding-right: 20px;
        margin: 0;

        display: flex;

        flex-wrap: nowrap;
      }
    }
  }
}

.loading-container {
  padding: 40px 0 60px;
  margin-top: 1em;
  min-height: 1px;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;

  .loading {
    position: relative;

    &:after {
      font-size: 10px;
      font-weight: bold;

      position: absolute;
      top: 50%;
      left: 50%;

      content: "loading";
      transform: translate(-50%, -50%);
      text-transform: uppercase;

      @include type.text_headline();
    }

    &:before {
      position: absolute;
      top: 50%;
      left: 50%;

      display: block;

      width: 60px;
      height: 60px;
      margin: -30px -30px;

      content: "";
      animation:
        rotation 1s infinite linear,
        opacity 0.5s;

      opacity: 1;
      border: 2px solid rgba($loading-container-before-border-color, 0.1);
      border-top-color: rgba($loading-container-before-border-top-color, 0.6);
      border-radius: 100%;

      backface-visibility: hidden;

      @keyframes rotation {
        to {
          transform: rotate(360deg);
        }
      }
    }
  }
}

.response-controls {
  padding-top: 1em;
  display: flex;
}

.response-control-media-type {
  margin-right: 1em;

  &--accept-controller {
    select {
      border-color: $response-content-type-controls-accept-header-select-border-color;
    }
  }

  &__accept-message {
    color: $response-content-type-controls-accept-header-small-font-color;
    font-size: 0.7em;
  }

  &__title {
    display: block;
    margin-bottom: 0.2em;
    font-size: 0.7em;
  }
}

.response-control-examples {
  &__title {
    display: block;
    margin-bottom: 0.2em;
    font-size: 0.7em;
  }
}

@keyframes blinker {
  50% {
    opacity: 0;
  }
}

.hidden {
  display: none;
}

.no-margin {
  height: auto;
  border: none;
  margin: 0;
  padding: 0;
}

.float-right {
  float: right;
}

.svg-assets {
  position: absolute;
  width: 0;
  height: 0;
}

section {
  h3 {
    @include type.text_headline();
  }
}

a.nostyle {
  text-decoration: inherit;
  color: inherit;
  cursor: pointer;
  display: inline;

  &:visited {
    text-decoration: inherit;
    color: inherit;
    cursor: pointer;
  }
}

.fallback {
  padding: 1em;
  color: #aaa;
}

.version-pragma {
  height: 100%;
  padding: 5em 0px;

  &__message {
    display: flex;
    justify-content: center;
    height: 100%;
    font-size: 1.2em;
    text-align: center;
    line-height: 1.5em;

    padding: 0px 0.6em;

    > div {
      max-width: 55ch;
      flex: 1;
    }

    code {
      background-color: #dedede;
      padding: 4px 4px 2px;
      white-space: pre;
    }
  }
}

.opblock-link {
  font-weight: normal;

  &.shown {
    font-weight: bold;
  }
}

span {
  &.token-string {
    color: #555;
  }

  &.token-not-formatted {
    color: #555;
    font-weight: bold;
  }
}

